--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.13.1"
+    "jest-expo": "^40.0.1",
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "jest-expo"
   },
   "private": true
 }
